--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-
+:root{
+  --color1:#77a1d3;
+  --color2:#78cbca;
+  --color3:#e684ae;
+}
 * {
   margin: 0;
   padding: 0;
@@ -130,8 +134,8 @@ form.sign-in-form {
 .social-icon:hover {
   /* color: #4481eb;
   border-color: #4481eb; */
-  background: -webkit-radial-gradient(53% 100% circle, #FBC2EB 0%,#A6C1EE 100%);
-  background: radial-gradient(circle at 53% 100%, #FBC2EB 0%,#A6C1EE 100%);
+  background: -webkit-radial-gradient(53% 100% circle, var(--color2) 0%,var(--color3) 100%);
+  background: radial-gradient(circle at 53% 100%, var(--color2) 0%,var(--color3) 100%);
   /* -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
   border-color: white;
@@ -142,7 +146,7 @@ form.sign-in-form {
 .btn {
   width: 150px;
   /* background-color: #5995fd; */
-  background-image: linear-gradient(to right,#FBC2EB 0%,#A6C1EE 51%);
+  background-image: linear-gradient(to right,var(--color2) 0%,var(--color3)51%);
   background-size:200%  auto;
   border: none;
   outline: none;
@@ -158,7 +162,7 @@ form.sign-in-form {
 
 .btn:hover {
   /* background-position: right center; */
-  background-image: linear-gradient(to left,#FBC2EB 51%,#A6C1EE);
+  background-image: linear-gradient(to left,var(--color2) 51%,var(--color3));
 
 }
 .panels-container {
@@ -179,7 +183,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg,#FBC2EB 0%,#A6C1EE 100%);
+  background-image: linear-gradient(-45deg,var(--color1),var(--color3)40%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
@@ -203,6 +207,7 @@ form.sign-in-form {
 .left-panel {
   pointer-events: all;
   padding: 3rem 17% 2rem 12%;
+
 }
 
 .right-panel {
@@ -237,7 +242,7 @@ form.sign-in-form {
   font-size: 0.8rem;
 }
 
-.right-panel .image,
+/* .right-panel .image, */
 .right-panel .content {
   transform: translateX(800px);
 }
@@ -249,7 +254,7 @@ form.sign-in-form {
   right: 52%;
 }
 
-.container.sign-up-mode .left-panel .image,
+/* .container.sign-up-mode .left-panel .image, */
 .container.sign-up-mode .left-panel .content {
   transform: translateX(-800px);
 }
@@ -268,7 +273,7 @@ form.sign-in-form {
   z-index: 1;
 }
 
-.container.sign-up-mode .right-panel .image,
+/* .container.sign-up-mode .right-panel .image, */
 .container.sign-up-mode .right-panel .content {
   transform: translateX(0%);
 }
