--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:700);
+@import url(https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300&family=Press+Start+2P&display=swap);
 :root{
     --primary:#f9c2ce;
     --light:#eeeeee;
@@ -13,14 +14,19 @@
 }
 
 body{
-	/* background-image: url("images\\Pink_Purple_Clouds_Vector_Art_PNG__Pink_Cute_Cloud_Clipart__Cloud_Clipart__Clipart__Pink_PNG_Image_For_Free_Download-removebg-preview.png");
+	/* background-image: url("Download premium vector of Colorful grid lined pastel background vector by Tang about memphis patterns, pattern, seamless pattern, seamless, and memphis 513083.jpg"); */
+	/* background-image: url("Download free vector of Girly grid lined seamless background vector by Tang about memphis patterns, seamless pattern, pattern, seamless, and girly pastel website 513081.jpg"); */
+	background-image: url("Download Free Vector Art, Stock Photos & Stock Video Footage.jpg");
+
+
     background-repeat: no-repeat;
+    background-size: 100%;
     background-attachment: fixed;
-    background-position-y: 75px;
-    background-position-x: 500px;
-    background-position-y: -10px;
-     */
-     background-color: white;
+    /* background-position-y: 100px; */
+    /* background-position-x: 500px; */
+    background-position-y: -12px;
+     
+     
     
     
 }
@@ -38,19 +44,21 @@ nav{
     left: 0;
     right: 0;
     z-index: 99;
-	/* background-image: linear-gradient(to right,#FBC2EB ,#A6C1EE); */
-	background-image: linear-gradient(to right,#e684ae,#77a1d3);
+	/* background-image: linear-gradient(to right,#556DC8,#F96CFF 30%); */
+	background-image: linear-gradient(to left,#A1D3D2,#BF90C9,#4957A7,#f681fa);
+    /* background-color: #c17cfd; */
 
-    /* background-color:#ff8787; */
+    /* background-color:#6A2C70; */
     /* background-color: #f8c4b4; */
     
-    padding: 16px 32px;
-    border-bottom: 3px solid var(--primary);
+    padding: 10px 32px;
+    border: 2px solid black;
 }
 h1{
-    color: #fff;
+    color: black;
     font-size: 28px;
-    font-weight: 900;
+    font-family: 'Kiwi Maru', serif;
+    /* font-weight: 900; */
     letter-spacing: 2px;
     text-transform: uppercase;
 }
@@ -102,21 +110,54 @@ h1{
     margin: 0 -16px;
 }
 .menu a{
-    color: #fff;
+    color: black;
+    /* background-color: #C9C9C9; */
     margin:0 16px;
     font-weight: 600;
     text-decoration: none;
     transition: 0.4s;
     padding: 8px 16px;
-    border-radius: 99px;
+    border: 2px solid black;
+    /* border-left:3px solid #E6E6E6;
+    border-top:3px solid #E6E6E6;
+    border-right:3px solid #9D9D9D;
+    border-bottom:3px solid #9D9D9D; */
+    /* border-radius: 99px; */
 }
 .menu a.is-active, .menu a:hover{
     /* background-color: var(--primary); */
     /* background-color: #55dae4; */
-    background-color:#f9c2ce;
-   
+    background-color:#fffb96;
+   box-sizing: w;
 
 }
+
+
+.logout-button{
+    transform: translateX(20px);
+}
+
+.logout{
+    color: black;
+    /* background-color: #C9C9C9; */
+    margin:0 16px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.4s;
+    padding: 8px 16px;
+    border: 2px solid black;
+} 
+
+.logout:hover{
+    background-color:#fffb96;
+    
+}
+@media only screen and (max-width: 670px){
+    .logout-button{
+        transform: unset;
+    }
+}
+
  @media(min-width:768px){
     /* .pizza{
         display: none;
@@ -129,8 +170,14 @@ h1{
 
 .text{
 
-    color: var(--dark);
-    /* color: #cd7766; */
+    /* color: var(--dark); */
+    color: black;
+    /* background-color: #F5CD2F; */
+    border: 2px solid black;
+    display: table;
+    background-color: #fffb96;
+    margin: 0px auto 0px auto;
+    font-family: 'Kiwi Maru', serif;
     font-size: 28px;
     font-weight: 600;
     letter-spacing: 2px;
@@ -138,7 +185,12 @@ h1{
     margin-top: 100px;
     position: relative;
     text-align: center;
+
 }
+/* .text,span{
+    background-color: #f5cd2fc4;
+
+} */
 .images{
     position: relative;
     display: flex;
@@ -146,6 +198,7 @@ h1{
     justify-content: center;
     flex-wrap: wrap;  
    margin-top: 20px; 
+   /* margin-top: 100px; */
 }
 
 .imag{
@@ -156,7 +209,7 @@ h1{
 .imag img{
     width: 310px;
     height: 180px;
-    border: 2px solid #ff3d0039;
+    border: 3px solid #bd76fc;
     border-radius: 13px;
     cursor: pointer;
     margin: 10px;
@@ -171,7 +224,7 @@ h1{
     left: 50%;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    background-color:#f7aabb;
+    background-color:#bd76fc;
     color: white;
     font-size: 16px;
     padding: 12px 24px;
@@ -188,7 +241,7 @@ h1{
     left: 95%;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    background-color:#f7aabb;
+    background-color:#bd76fc;
     color: black;
     padding: 6px 12px;
     border: none;
@@ -219,6 +272,7 @@ h1{
     display: inline-block;
 }
 
+
 form{
     position: relative;
     display: flex;
@@ -228,10 +282,35 @@ form{
 
 }
 
+.download{
+    text-decoration: none;
+    color: white;
+}
+
+/* .logout-button{
+    transform: translateX(100px);
+} */
+
+/* .logout{
+    text-decoration: none;
+    background-color:#f7aabb;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+@media only screen and (max-width: 670px){
+    .logout-button{
+        transform: unset;
+    }
+} */
+
 /* .btn{
     display: none;
 }
-
 .images img:hover +.btn,.btn:hover{
     display: inline-block;
     color: black;
